# okx-scanner

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  codebase.txt  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_instrument_tier.py  003_paper_trades.py  004_strategy_settings.py  005_atr_confirmation.py  006_new_strategies.py  007_trading_config.py  008_paper_trade_mode.py
config/: __init__.py  settings.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  trading.ts  tradingConfig.ts
dashboard/src/components/: ApiErrorBanner.tsx  ErrorBoundary.tsx  ScoreBreakdownModal.tsx  Toast.tsx
dashboard/src/components/alerts/: CompactStatCard.tsx  PerformancePanels.tsx  PnlChartCard.tsx  TimeRangeFilter.tsx  TradeDetailModal.tsx  TradeFilterBar.tsx  TradesTable.tsx
dashboard/src/components/dashboard/: FilterTabs.tsx  (+8 more)
dashboard/src/hooks/: useAlerts.ts  useDashboardData.ts  useStrategyOpportunities.ts
dashboard/src/i18n/: I18nProvider.tsx  en.ts  types.ts  vi.ts
dashboard/src/pages/: AlertsPage.tsx  BreakoutScannerPage.tsx  CorrelationDivergencePage.tsx  DashboardPage.tsx  FundingScannerPage.tsx  LiquidationZonePage.tsx  MarketOverviewPage.tsx  MomentumScannerPage.tsx  PlaceholderPage.tsx  SettingsPage.tsx  StatArbitragePage.tsx  TradingPage.tsx  TrendPullbackPage.tsx  VolumeAnomalyPage.tsx
dashboard/src/types/: api.ts
dashboard/src/utils/: colors.ts  format.ts  formatters.ts  timeRange.ts
scripts/: seed_instruments.py
src/: __init__.py
src/alert/: __init__.py
src/api/: __init__.py  app.py
src/api/routes/: __init__.py  alerts.py  health.py  opportunities.py  status.py  strategy_settings.py  trading_config.py
src/collector/: __init__.py  cache.py  normalizer.py  rate_limiter.py  rest_client.py  trading_client.py  ws_client.py
src/db/: __init__.py  models.py  session.py
src/db/repositories/: __init__.py  instrument.py  opportunity.py  paper_trade.py  score.py  strategy_settings.py  trading_config.py
src/filter/: __init__.py  market_filter.py
src/risk/: __init__.py  real_trade_risk.py  risk_filter.py
src/schemas/: __init__.py  filter.py  market.py  risk.py  scoring.py  strategy.py  strategy_settings.py
src/scoring/: __init__.py  components.py  scorer.py
src/strategy/: __init__.py  base.py  breakout.py  correlation_divergence.py  funding.py  helpers.py  indicators.py  liquidation_zone.py  momentum.py  stat_arb.py  trend_pullback.py  volume_anomaly.py
src/utils/: __init__.py  compat.py  logger.py
src/worker/: __init__.py  main.py  pending_confirmations.py  scanner_loop.py  scanner_state.py  scheduler.py  trade_tracker.py
tests/: conftest.py  test_health.py
tests/fixtures/: okx_candle.json  okx_funding_rate.json  okx_instrument.json  okx_ticker.json
tests/integration/: test_api.py  test_pipeline.py  test_rest_client.py
tests/unit/: test_breakout_strategy.py  test_cache.py  test_correlation_divergence.py  test_funding_strategy.py  test_indicators.py  test_liquidation_zone.py  test_market_filter.py  test_momentum_strategy.py  test_normalizer.py  test_paper_trade.py  test_risk_filter.py  test_scheduler.py  test_scorer.py  test_seed_instruments.py  test_stat_arb.py  test_strategy_settings.py  test_trend_pullback_strategy.py  test_volume_anomaly_strategy.py
(+6 files in other folders)
